--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AppVuaTiengViet</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_web_client_id">972709463386-llrf32p1t1iqp16mdbrtc83r5mpgtg4c.apps.googleusercontent.com</string>
 </resources>
